<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/screenSaver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ScreenSaverText"
        android:textSize="18sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <LinearLayout
        android:id="@+id/screenSaverDelayLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/screen_saver_delay"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/screenSaverDelay"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:hint="@string/screen_saver_delay_hint"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/screenSaverTypeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/screenSaverTypeText"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/screenSaverType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/min_brightness_screen_saver_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/min_brightness"
            android:textSize="18sp" />

        <com.google.android.material.slider.Slider
            android:id="@+id/screensaver_min_brightness"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:valueFrom="1"
            android:valueTo="255" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/sleepOptimizationLevelLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sleep_opt_title"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/sleepOptimizationLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog" />
    </LinearLayout>


    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/wakeOnProximity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/wake_on_proximity"
        android:textSize="18sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <LinearLayout
        android:id="@+id/proximityKeepAwakeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/proximity_keep_awake_seconds"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/proximityKeepAwakeSeconds"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:ems="3"
            android:gravity="end"
            android:hint="@string/proximity_keep_awake_hint"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
